--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
+locale                   : "ch-China"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Liu Wanyu / Linking"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Liu wanyu"
+description              : &description "Time will tell"
+url                      : https://LWY0905.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "LWY0905/LWY0905.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Linking"
+  pronouns         : "she/her"  
+  bio              : "majoring in CS"
+  location         : "Qingdao"
+  employer         : "Shandong University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "lwy@mail.sdu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
