Update my avator

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "LWY0905/LWY0905.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "avator.png"
   name             : "Linking"
   pronouns         : "she/her"  
   bio              : "majoring in CS"
