--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Qingdao"
   employer         : "Shandong University"
   # uri              : # URL
-  email            : "lwy@mail.sdu.edu.cn" 
+  email            : "liuwanyu@mail.sdu.edu.cn" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
